*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9327 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -394,6 +394,8 @@ module.YouthTwins.desc=Muestra la cantidad de gemelos posibles en tu equipo de j
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 YouthTwins.possibleTwins=Este jugador tiene %1 gemelo posible.;Este jugador tiene %1 gemelos posibles.
 YouthTwins.markedTwins=Marcado como gemelo\: %1
