--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -175,6 +175,9 @@ module.TeamStats.General.desc=Informations générales (TSI/âge)
 module.TeamStats.Speciality.desc=Spécialité
 module.TeamStats.Personality.desc=Personnalité
 module.TeamStats.Status.desc=Statut (cartons et blessés)
+module.TeamStats.Attributes.desc=Attributs
+module.TeamStats.Skills.desc=Caractéristiques
+module.TeamStats.Match.desc=Match
 module.TeamStats.Current_league.desc=Ligue actuelle
 module.ExtraPlayerInfo.desc=Afficher des informations supplémentaires de joueurs sur la page les joueurs.
 module.ExtraPlayerInfo.CoachInfo.desc=Ajoute le type et le niveau de l'entraineur.
@@ -388,10 +391,13 @@ module.RatingsDisplay.HatStats.desc=Comme HatStats
 module.RatingsDisplay.HTSums.desc=Selon les notes de hattrick
 module.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattrick pour être moins suspect. Assurez-vous que vous avez désactivez également tous les autres modules qui pourraient vous démasquer, notamment les modules « Alertes ».
 module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent sur la page des statistiques du joueur
+module.YouthTwins.desc=Affiche le nombre de doublons possibles de vos jeunes joueurs via hattrick youthclub. Vous n'avez pas besoin d'avoir un compte hattrick youthclub pour utiliser ce module. La reconnaissance faciale de vos joueurs est importante pour la détection des doublons, cette fonction n'est donc utile que pour les ht-supporters.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Loyalty display
 
 #Youth-Twins
 YouthTwins.possibleTwins=Ce joueur a %1 possible doublon.;Ce joueur a %1 possibles doublons.
