--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -154,6 +154,8 @@ module.RatingsDisplay.DenominationsRange.desc=בדירוג מספרים בין 0
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
