--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -176,6 +176,9 @@ module.TeamStats.General.desc=Osnovne informacije (TSI/godine)
 module.TeamStats.Speciality.desc=Specijalnost
 module.TeamStats.Personality.desc=Osobnost
 module.TeamStats.Status.desc=Stanje (kartoni/ozljede)
+module.TeamStats.Attributes.desc=Atributi
+module.TeamStats.Skills.desc=Vještine
+module.TeamStats.Match.desc=Utakmica
 module.TeamStats.Current_league.desc=Trenutna liga
 module.ExtraPlayerInfo.desc=Prikazati dodatne informacije o igračima na stranici s igračima.
 module.ExtraPlayerInfo.CoachInfo.desc=Prikazati informacije o bivšim i sadašnjim trenerima.
@@ -394,6 +397,8 @@ module.YouthTwins.desc=Prikazuje broj potencijalnih blizanaca vaših juniora u s
 
 
 # IN-GAME STRINGS. translate first
+
+#Loyalty display
 
 #Youth-Twins
 YouthTwins.possibleTwins=Ovaj igrač ima %1 mogućeg blizanca.;Ovaj igrač ima %1 mogućih blizanaca.
