--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -394,6 +394,8 @@ module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esper
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 YouthTwins.possibleTwins=Questo giocatore ha %1 possibile gemello.;Questo giocatore ha %1 possibili gemelli.
 YouthTwins.markedTwins=Contrassegnato come gemello\: %1
