--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -97,6 +97,8 @@ module.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
