--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -242,6 +242,8 @@ module.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tkun 
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
