--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -395,6 +395,8 @@ module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats p
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 YouthTwins.possibleTwins=Deze speler heeft %1 mogelijke tweeling.;Deze speler heeft %1 mogelijke meerlingen.
 YouthTwins.markedTwins=Gemarkeerd als tweeling\: %1
