--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -393,6 +393,8 @@ module.PlayerStatsExperience.desc=Afișează subskill-ul experienței pe pagina 
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
