--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -175,6 +175,9 @@ module.TeamStats.General.desc=Generelle oplysninger (TSI/alder)
 module.TeamStats.Speciality.desc=Specialitet
 module.TeamStats.Personality.desc=Personlighed
 module.TeamStats.Status.desc=Status (kort/skader)
+module.TeamStats.Attributes.desc=Egenskaber
+module.TeamStats.Skills.desc=Evner
+module.TeamStats.Match.desc=Kamp
 module.TeamStats.Current_league.desc=Nuværende liga
 module.ExtraPlayerInfo.desc=Vis ekstra oplysninger af spillere på spillere side.
 module.ExtraPlayerInfo.CoachInfo.desc=Vis oplysninger af tidligere og nuværende trænere.
@@ -380,7 +383,7 @@ module.MatchSimulator.RatingsOnTop.desc=Holder rating forudsigelse øverst
 module.MatchSimulator.RatingsBelow.desc=Viser forudsigelse nedenfor
 module.MatchSimulator.RatingsRight.desc=Viser forudsigelse til højre
 module.MatchSimulator.HTMSPrediction.desc=Tilføj HTMS forudsigelse
-module.HeaderToggle.desc=At klikke på h2-headere slår vise og skjule af det efterfølgende afsnit til. Husker sidste indstilling, individuelt baseret på side type og side title
+module.HeaderToggle.desc=Ved at klikke her, slår du vise og skjule af det efterfølgende afsnit til og fra. Husker sidste indstilling, baseret individuelt på side type og side title
 module.Filter.desc=Tilføjer filtre til topspillere side
 module.RatingsDisplay.desc=Viser gennemsnitlige ratings i en anden typografi
 module.RatingsDisplay.DenominationsRange.desc=I området 0-20 pålydende værdi
@@ -388,10 +391,13 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 module.RatingsDisplay.HTSums.desc=Som Hattrick rating summer
 module.SafeForWork.desc=Erstatter ikonet og titelteksten til Hattrick faner for at se mindre mistænkelig ud. Kontroller, at du også deaktivere alle andre moduler, der kan være risikabel, især "advarsel" moduler.
 module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statistik side
+module.YouthTwins.desc=Viser mængden af ​​mulige tvillinger for dine ungdomsspillere i forbindelse med Hattrick youthclub. Du behøver ikke at have en Hattrick youthclub konto for at bruge dette modul. Da viden om spilleransigter er afgørende for tvilling afsløring,er denne funktion kun nyttig for supportere.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Loyalty display
 
 #Youth-Twins
 YouthTwins.possibleTwins=Denne spiller har %1 muligt tvilling.;Disse spillere har %1 mulige tvillinger.
