--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -254,6 +254,8 @@ module.RatingsDisplay.HatStats.desc=Ως HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
