--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -113,6 +113,8 @@ module.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.ek
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
