--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -172,6 +172,8 @@ module.RatingsDisplay.HatStats.desc=Kot HatStati
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
