--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -184,6 +184,8 @@ module.HighlightCupwins.desc=Виділяє команду-переможця н
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+
 #Youth-Twins
 
 #PlayerStatsExperience
