--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -16,8 +16,10 @@
 <note version="0.9.2">
 <item>● 또 하나의 거대한 언어 업데이트. 모든 번역가분들에게 다시 한 번 감사드립니다.</item>
 <item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험 포인트와 현재 소수부를 나타냅니다. (CatzHoek)</item>
-<item>● NEW: <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다. (기본 활성화)</item>
+<item>● NEW: <module>TeamPopupLinks</module>: 토너먼트를 추가하였습니다. 테이블의 현재 팀을 선택적으로 강조합니다. (기본 활성화)</item>
 <item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 평균 레이팅을 시리즈 통계 테이블에 추가합니다.</item>
+<item>● NEW: <module>TeamStats</module>: 필터와 더 많은 개요를 추가하였습니다.</item>
+<item>● PlayerFilters 에 필터 옵션을 추가하였습니다.</item>
 <item>● 이적 명단 검색을 위한 <module>SkillTable</module>: 부상 정보를 수정하였습니다.</item>
 <item>● MatchReportFormat: 부정적인 SE 아이콘 추가하였습니다.</item>
 <item>● Links: 추가된 동적 링크를 기본적으로 활성화합니다.</item>
@@ -27,7 +29,14 @@
 <item>● ForumStripHattrickLinks: 확인 옵션을 수정하였습니다.</item>
 <item>● MatchSimulator: 비 토너먼트 경기를 추가하는 것을 수정하였습니다.</item>
 <item>● CopyYouth: 쓸모없는 선수 소스 복사 기능을 제거하였습니다.</item>
+<item>● CopyYouth: 훈련 보고서 복사를 해당하는 HT-Youthclub 페이지에 연결하였습니다.</item>
+<item>● ShowLineupSet: HT 변경사항에 따른 깨진 레이아웃을 수정하였습니다.</item>
+<item>● 북마크된 선수의 누락된 playerid을 복구하였습니다.</item>
+<item>● 이적료 중간값을 수정하였습니다.</item>
 <item>● AMO 규정을 위한 몇 가지 작업이 있었습니다.</item>
+<item></item>
+<item><xhtml:b>Google Chrome 사용자에게</xhtml:b></item>
+<item>Chrome의 선택적 권한 허가 시스템에 권한 거부와 재허가하는데 문제가 있는 것 같습니다. 권한 거부로 복구하려면 현재 알려진 유일한 해결책은 Foxtrick을 재설치하는 것입니다.</item>
 </note>
 
 <note version="0.9.1">
@@ -103,8 +112,8 @@
 <item>● LeagueChat 과 HeaderFixFlickerFix 제거 (convincedd)</item>
 <item>● 많은 내부 변화 (ryanli, convincedd) 와 그 외 세세한 부분 다수 수정</item>
 <item></item>
-<item><xhtml:b>Google Chrome 사용자를 위해서</xhtml:b></item>
-<item>우리는 Chrome의 선택적 권한 시스템을 구축했습니다. 이제 FoxTrick을 설치할 때 필요한 통과 절차가 몇 가지 있습니다. 아직 설정을 하지 않았으므로 여러분은 접근을 허용하길 원하는 것을 확인하고 환경설정을 저장해야 합니다. 여러분은 나중에 그것을 필요한 모듈을 활성화할 때마다 외부 리소스를 접근을 허용하게 될 것입니다.</item>
+<item><xhtml:b>Google Chrome 사용자에게</xhtml:b></item>
+<item>우리는 Chrome의 선택적 권한 시스템을 구축했습니다. 이제 FoxTrick을 설치할 때 필요한 통과 절차가 몇 가지 있습니다. 초기 설정을 하지 않았으므로 여러분은 접근을 허용하길 원하는 것을 확인하고 환경설정을 저장해야 합니다. 여러분은 나중에 그것을 필요한 모듈을 활성화할 때마다 외부 리소스를 접근을 허용하게 될 것입니다.</item>
 </note>
 
 <note version="0.8.2">
