--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -16,8 +16,10 @@
 <note version="0.9.2">
 <item>● Многобројна ажурирања превода. Хвала свим преводиоцима.</item>
 <item>● НОВО: <module>PlayerStatsExperience</module>: на страници Историје наступа приказује колико искуства је играч добио у појединим мечевима и колики је његов тренутни подниво.(CatzHoek)</item>
-<item>● <module>TeamPopupLinks</module>: опција за означавање тренутног тима у табелама</item>
-<item>● <module>RatingsDisplay</module>: просечне оцене и звездице у табели статистке за лигу</item>
+<item>● НОВО: <module>TeamPopupLinks</module>: Додати линкови за турнире и опција за означавање тренутног тима у табелама</item>
+<item>● НОВО: <module>RatingsDisplay</module>: просечне оцене и звездице у табели статистке за лигу</item>
+<item>● НОВО: <module>TeamStats</module>: додатни филтери и нове секције</item>
+<item>● <module>PlayerFilters</module> сада има још неколико додатних опција за филтрирање</item>
 <item>● <module>SkillТable</module> на страници резултата претраге трансфера: исправка грешке код повређених играча</item>
 <item>● <module>MatchReportFormat</module>: додате сиве иконице за негативне специјалне догађаје</item>
 <item>● Links: укључена опција за додавање динамичких линкова</item>
@@ -26,8 +28,15 @@
 <item>● <module>ForumAlterHeaderLine</module>: Поправљено означавање отварача теме и уклањање постИД за једноставно заглавље на Форуму</item>
 <item>● <module>ForumStripHattrickLinks</module>: поправљена опција за потврду</item>
 <item>● MatchSimulator: поправљено додавање мечева који нису са турнира</item>
-<item>● CopyYouth: уклоњена бескорина опција за копирање изворног кода играча</item>
+<item>● CopyYouth: уклоњена бескорисна опција за копирање изворног кода играча</item>
+<item>● CopyYouth: копирање извештаја са тренинга директно линковано са одговарајућом страницом на HT-Youthclub</item>
+<item>● ShowLineupSet: Поправка за ХТ промене и исправљена презентациона грешка за једноставну тему</item>
+<item>● Враћен недостајући ИД за маркиране играче</item>
+<item>● Медијан трансфер цена поправљена за кориснике код којих није радила</item>
 <item>● Још нека унапређења ради усклађивања са <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a> стандардима</item>
+<item></item>
+<item><xhtml:b>За оне који кристе Google Chrome</xhtml:b></item>
+<item>Изгледа да систем опционих дозвола за Chrome има одређених пропблема приликом уклањања и поновног давања дозвола. Једино познато решење овог проблема је да реинсталирате Фокстрик уколико желите да поново дате дозволе које сте претходно укинули.</item>
 </note>
 
 <note version="0.9.1">
