*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9348 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -398,6 +398,8 @@ module.YouthTwins.desc=Viser mængden af ​​mulige tvillinger for dine ungdom
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Moderklub bonus)
+LoyaltyDisplay.loyaltyBonus=(Loyalitetsbonus)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Denne spiller har %1 muligt tvilling.;Disse spillere har %1 mulige tvillinger.
