--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -396,6 +396,8 @@ module.YouthTwins.desc=Zeigt in Zusammenarbeit mit hattrick youthclub an wieviel
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Heimatverein-Bonus)
+LoyaltyDisplay.loyaltyBonus=(Treuebonus)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Dieser Spieler hat %1 potenziellen Zwilling.; Dieser Spieler hat %1 potenzielle Zwillinge.
