--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -399,6 +399,8 @@ module.YouthTwins.desc=Prikazuje broj potencijalnih blizanaca vaših juniora u s
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bonus matičnog kluba)
+LoyaltyDisplay.loyaltyBonus=(Bonus privrženosti)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Ovaj igrač ima %1 mogućeg blizanca.;Ovaj igrač ima %1 mogućih blizanaca.
