--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -16,9 +16,11 @@
 	<note version="0.9.2">
 		<item>● Очередное массовое обновление переводов. Снова всем спасибо за эти обновления.</item>
 		<item>● Новый модуль <module>PlayerStatsExperience</module>: показывает примерное увеличение опыта игрока за сыгранные матчи и показывает текущий подуровень (CatzHoek).</item>
-		<item>● Новый модуль <module>TeamPopupLinks</module>: выделение текущей команды в таблицах (включено по умолчанию).</item>
+		<item>● Новый модуль <module>TeamPopupLinks</module>: добавлены турниры; возможность выделения текущей команды в таблицах (включена по умолчанию).</item>
 		<item>● Новый модуль <module>RatingsDisplay</module>: добавляет средние звёзды и рейтинги в таблицу статистики лиги.</item>
-		<item>● Таблица навыков в поиске трансферов: исправлены травмы.</item>
+    <item>● Ммодуль <module>TeamStats</module>: обновляется с учётом фильтров и дополнительных секций.</item>
+    <item>● Фильтр игроков теперь имеет больше критериев.</item>
+    <item>● Таблица навыков в поиске трансферов: исправлены травмы.</item>
 		<item>● Модуль <module>MatchReportFormat</module>: добавлены значки для негативных специальных событий.</item>
 		<item>● Ссылки: добавление динамических ссылок по умолчанию включено.</item>
 		<item>● Ссылки и участники проекта: загрузка сжатого файла для уменьшения нагрузки на канал.</item>
@@ -27,7 +29,14 @@
 		<item>● Модуль <module>ForumStripHattrickLinks</module>: исправлены параметры подтверждения.</item>
 		<item>● Модуль <module>MatchSimulator</module>: исправлено добавление нетурнирных матчей.</item>
 		<item>● Модуль <module>CopyYouth</module>: удалены устаревшие ссылки на копирование исходного кода страницы.</item>
-		<item>● Некоторые изменения для совместимости с <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a>.</item>
+    <item>● Модуль <module>CopyYouth</module>: копирование отчёта о тренировке ссылается на соответствующую страницу HT-Youthclub.</item>
+    <item>● Модуль <module>ShowLineupSet</module>: учтены последние изменения в HT и исправлен простой стиль страницы.</item>
+    <item>● Исправлена ошибка с недоступным id игрока в закладках.</item>
+    <item>● Исправлено определение среднерыночной цены для некоторых языков.</item>
+    <item>● Некоторые изменения для совместимости с <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a>.</item>
+    <item></item>
+    <item><xhtml:b>Для пользователей Google Chrome:</xhtml:b></item>
+    <item>Похоже, что у системы дополнительных разрешений Chrome существует проблема с отзывом и дальнейшим передобавлением разрешений. Единственное известное решение - переставить FoxTrick, если Вам нужно вернуть ранее отозванное разрешение.</item>
 	</note>
 
 	<note version="0.9.1">
