*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9351 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -175,6 +175,9 @@ module.TeamStats.General.desc=Información General (TSI/edad)
 module.TeamStats.Speciality.desc=Especialidad
 module.TeamStats.Personality.desc=Personalidad
 module.TeamStats.Status.desc=Estado (tarjetas/lesiones)
+module.TeamStats.Attributes.desc=Atributos
+module.TeamStats.Skills.desc=Habilidades
+module.TeamStats.Match.desc=Partido
 module.TeamStats.Current_league.desc=Liga Actual
 module.ExtraPlayerInfo.desc=Muestra información extra de los jugadores en la página de jugadores.
 module.ExtraPlayerInfo.CoachInfo.desc=Muestra información sobre entrenadores actuales y anteriores.
@@ -395,6 +398,8 @@ module.YouthTwins.desc=Muestra la cantidad de gemelos posibles en tu equipo de j
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bono club origen)
+LoyaltyDisplay.loyaltyBonus=(Bono lealtad)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Este jugador tiene %1 gemelo posible.;Este jugador tiene %1 gemelos posibles.
