--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -398,6 +398,8 @@ module.YouthTwins.desc=Affiche le nombre de doublons possibles de vos jeunes jou
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bonus du club d'origine)
+LoyaltyDisplay.loyaltyBonus=(Bonus de fidélité)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Ce joueur a %1 possible doublon.;Ce joueur a %1 possibles doublons.
