--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -129,6 +129,7 @@ module.LinksAchievements.desc=Añadir algunos enlaces externos a la página de l
 module.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 module.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 module.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
+module.LinksWorld.desc=Agrega algunos enlaces a la página de Mundo
 module.LoyaltyDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu página personal del jugador (sólo funciona con la opción "Mostrar barras de habilidades" activada en las preferencias de HT)
 module.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 module.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
@@ -175,6 +176,9 @@ module.TeamStats.General.desc=Información General (TSI/edad)
 module.TeamStats.Speciality.desc=Especialidad
 module.TeamStats.Personality.desc=Personalidad
 module.TeamStats.Status.desc=Estado (tarjetas/lesiones)
+module.TeamStats.Attributes.desc=Atributos
+module.TeamStats.Skills.desc=Habilidades
+module.TeamStats.Match.desc=Partido
 module.TeamStats.Current_league.desc=Liga Actual
 module.ExtraPlayerInfo.desc=Muestra información extra de los jugadores en la página de jugadores.
 module.ExtraPlayerInfo.CoachInfo.desc=Muestra información sobre entrenadores actuales y anteriores.
@@ -294,6 +298,7 @@ module.TeamPopupLinks.LastLineup.desc=Última Alineación
 module.TeamPopupLinks.NextMatch.desc=Próximo partido
 module.TeamPopupLinks.AddNextMatch.desc=Añadir próximo partido a HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Partidos juveniles
+module.TeamPopupLinks.Tournaments.desc=Torneos
 module.TeamPopupLinks.Coach.desc=Entrenador
 module.TeamPopupLinks.CustomLink.desc=Enlaces personalizados en líneas separadas. Las etiquetas [UserID] y [TeamID] se sustituiran por los IDs actuales. Ejemplo\: {"link"\:"http\://example.com/[teamid]", "titulo"\: "vínculo de ejemplo", "más"\: falso, "newTab"\: true}
 module.SkillColoring.desc=Mejor visualización de las habilidades
@@ -378,6 +383,7 @@ module.MatchSimulator.desc=Añade un simulador de partidos a la inerfaz de instr
 module.MatchSimulator.RatingsOnTop.desc=Mantiene la predicción de calificaciones en la parte superior
 module.MatchSimulator.RatingsBelow.desc=Mostrar la predicción en la parte inferior
 module.MatchSimulator.RatingsRight.desc=Mostrar la predicción en la parte derecha
+module.MatchSimulator.HTMSPrediction.desc=Añadir predicción HTMS
 module.HeaderToggle.desc=Al hacer clic en los encabezados h2 se alterna mostrar y ocultar la siguiente sección. Recuerda el último ajuste de forma individual según el tipo de página y el título de encabezado
 module.Filter.desc=Añade filtros a la página de Mejores Jugadores
 module.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
@@ -386,16 +392,29 @@ module.RatingsDisplay.HatStats.desc=Como Hatstats
 module.RatingsDisplay.HTSums.desc=Como suma de calificaciones de Hattrick
 module.SafeForWork.desc=Reemplaza el icono y el título de las pestañas de Hattrick para que se vean menos sospechosas. Asegúrate de que también deshabilitas todos los demás módulos que pueden ser riesgosos, especialmente los módulos de "Alertas".
 module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la página de Historial de Actuaciones
+module.YouthTwins.desc=Muestra el monto de gemelos posibles para tus juveniles en conjunto con Hattrick youthclub. No es necesario tener una cuenta de HYC para utilizar este módulo. Dado que el conocimiento acerca de las caras del jugador es crucial para la detección de gemelos, esta función sólo es útil para supporters.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bono club madre)
+LoyaltyDisplay.loyaltyBonus=(Bonos de lealtad)
 
 #Youth-Twins
+YouthTwins.possibleTwins=Este jugador tiene %1 gemelo posible.;Este jugador tiene %1 gemelos posibles.
+YouthTwins.markedTwins=Marcado como gemelo\: %1
+YouthTwins.nonTwins=Marcado como no-gemelo\: %1
+YouthTwins.undecidedTwins=Aún no se ha marcado\: %1
+YouthTwins.nonHyUser=Puedes encontrar más información acerca de su potencial mediante Hattrick Youthclub.
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Ya ha sumado entre %1 y %2 de 28 puntos de experiencia. Su experiencia está entre %3 y %4.
+PlayerStatsExperience.NotAllMatchesVisible=El valor real podría ser mayor debido a que no todos los partidos se muestran.
+PlayerStatsExperience.NoSkillUpFound=El valor real podría ser mayor porque no se ha encontrado ningún subida de experiencia registrada.
+PlayerStatsExperience.ExperienceChange.title=Ganancia de experiencia
+PlayerStatsExperience.ExperienceChange.title.abbr=EX+
 
 #Series statistics
 rating.average=Rating promedio
@@ -599,8 +618,18 @@ matchOrder.swapPositions=Intermcabiar posiciones
 matchOrder.options=Opciones
 matchOrder.staminaDiscount=Descuento por condición
 matchOrder.staminaDiscount.title=Las calificaciones del sector tienen un descuento de acuerdo a la contribución de los jugadores de ese sector
+matchOrder.attVsDef=Ataque vs defensa
+matchOrder.attVsDef.title=Mostrar las valoraciones de los oponentes como Ataque-vs-Defensa o Ataque-vs-Ataque
 matchOrder.summary=Resumen
 matchOrder.tournamentMatch=Partido de Torneo
+matchOrder.homeAway=Detección automática, ¿agregar equipo local o equipo visitante?
+matchOrder.homeAway.abbr=L/V
+matchOrder.default=Predeterminado
+matchOrder.default.abbr=P
+matchOrder.home=Local
+matchOrder.home.abbr=L
+matchOrder.away=Visitante
+matchOrder.away.abbr=V
 
 #Skills
 Playmaking=Jugadas
@@ -906,6 +935,7 @@ NextMatch=Próximo partido
 AddNextMatch=Añadir próximo partido a HT-Live
 LastLineup=Última Alineación
 YouthMatches=Partidos Juveniles
+Tournaments=Torneos
 more=más...
 less=menos...
 
