*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9354 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -80,7 +80,7 @@ module.ForumYouthIcons.settings.desc=מוסיף סמל להגדרות פוקסט
 module.ForumYouthIcons.tournament.desc=מוסיף סמל למספר טורניר
 module.ForumYouthIcons.tournament_match.desc=מוסיף כפתור למספר משחק בטורניר
 #FormatPostingText
-module.FormatPostingText.desc=מחליף תגיות HT-ML של פוקסטריק בתגיות HTML (כלומר, אלמנט 'קדם')
+module.FormatPostingText.desc=מחליף תגיות HT-ML של פוקסטריק בתגיות HTML (כלומר, אלמנט 'pre')
 module.FormatPostingText.NestedQuotesAsSpoilers.desc=מציג את מספר הציטוטים המצויים בספוילר. ציין את כמות הרמות
 #EmbedMedia
 module.EmbedMedia.desc=מזהה קישורים לקובצי מדיה ומטביע אותם באתר (בשלב הניסיון)
