--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -175,6 +175,9 @@ module.TeamStats.General.desc=一般的な情報（TSI/年齢）
 module.TeamStats.Speciality.desc=特殊技能
 module.TeamStats.Personality.desc=個性
 module.TeamStats.Status.desc=ステータス（カード/負傷）
+module.TeamStats.Attributes.desc=属性
+module.TeamStats.Skills.desc=スキル
+module.TeamStats.Match.desc=試合
 module.TeamStats.Current_league.desc=現在のリーグ
 module.ExtraPlayerInfo.desc=選手ページで拡張情報の表示
 module.ExtraPlayerInfo.CoachInfo.desc=前任のコーチと現在のコーチの情報を表示する
@@ -388,12 +391,15 @@ module.RatingsDisplay.HatStats.desc=HatStatsで
 module.RatingsDisplay.HTSums.desc=Hattrickレーティング合計
 module.SafeForWork.desc=職場や授業中Hattrickを開いているとき、Hattrickタブのアイコンやタイトル文字を怪しくなさそうなもの(ゲームをしているとは思われないようなもの）に置き換える。危険かもしれないすべてのモジュールが無効になっているか自分でも確認してください。特に音が出る「アラート」モジュール。
 module.PlayerStatsExperience.desc=選手統計ページに経験のサブスキルを表示する
+module.YouthTwins.desc=Hattrick Youthclubと連動して、ユース選手のうち双子の可能性のある人数を表示する。このモジュールの利用にHattrick Youthclubのアカウントは必要ありません。双子の判定には選手のアバターに関する情報が不可欠なので、この機能はサポーターのみ利用可能です。
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=出身クラブボーナス
+LoyaltyDisplay.loyaltyBonus=忠誠心ボーナス
 
 #Youth-Twins
 YouthTwins.possibleTwins=この選手は%S人双子がいる可能性があります。
