Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9355 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -404,9 +404,9 @@ LoyaltyDisplay.loyaltyBonus=(Бонус за оданост)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Овај играч има %1 могућег близанца.;Овај играч има %1 могућа близанца.;Овај играч има %1 могућих близанаца.
-YouthTwins.markedTwins=Број већ маркираних близанаца: %1
-YouthTwins.nonTwins=Број маркираних који немају близанца: %1
-YouthTwins.undecidedTwins=Још увек немаркирани ирачи: %1
+YouthTwins.markedTwins=Број потенцијалних близанаца који су означени као да јесу близанци: %1
+YouthTwins.nonTwins=Број потенцијалних близанаца који су означени као "није близанац"!: %1
+YouthTwins.undecidedTwins=Број потенцијалних близанаца који нису означени ни као да јесу близанци, нити као да нису близанци.: %1
 YouthTwins.nonHyUser=Можете сазнати више о потенцијалу овог играча уколико користите 'hattrick youthclub'.
 
 #PlayerStatsExperience
