Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9371 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,6 +14,8 @@
 </note>
 
 <note version="0.9.2">
+<item>● Редизајнирано аутоматско препознавање језика. Више неће бити грешака при препознавању.</item>
+<item>● НОВО: <module>PlayerStatsExperience</module>: приказује колико искуства је играч добио од последњег скока и колики му је тренутни подниво искуства</item>
 <item>● Многобројна ажурирања превода. Хвала свим преводиоцима.</item>
 <item>● НОВО: <module>PlayerStatsExperience</module>: на страници Историје наступа приказује колико искуства је играч добио у појединим мечевима и колики је његов тренутни подниво.(CatzHoek)</item>
 <item>● НОВО: <module>TeamPopupLinks</module>: Додати линкови за турнире и опција за означавање тренутног тима у табелама</item>
