*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9382 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -30,7 +30,7 @@ module.AddLeaveConfButton.desc=Dodati ikonu za 'Napusti forum' u sve mape foruma
 module.StarsCounter.desc=Dodati ukupan broj zvjezdica na stranicu s postavom momčadi
 module.MoveLinks.desc=Premjestiti linkove s korisnikovom ligom i zastavicom u zaglavlje poruke. Napomena\: da bi ovo radilo u Hattrickovim postavkama mora biti uključena funkcija 'Prikaži avatare i informacije'\!
 #AttVsDef
-module.AttVsDef.desc=Dodati usporedbe napad/obrana u izvješće s utakmice
+module.AttVsDef.desc=Dodati usporedbe napada i obrane u izvješće s utakmice
 module.AttVsDef.oldstyle.desc=stari stil
 module.AttVsDef.newstyle.desc=novi stil
 module.AttVsDef.oldstyleifkseparated.desc=stari stil (odvojeni indirektni slobodni udarci)
@@ -618,8 +618,8 @@ matchOrder.swapPositions=Zamjena pozicija
 matchOrder.options=Opcije
 matchOrder.staminaDiscount=Smanjenje zbog izdržljivosti
 matchOrder.staminaDiscount.title=Ocjene pojedinih sektora se računaju prema igračevom doprinosu tom sektoru
-matchOrder.attVsDef=Napad-obrana
-matchOrder.attVsDef.title=Prikaži protivnikove ocjene kao napad-obrana ili kao napad-napad
+matchOrder.attVsDef=Napad protiv obrane
+matchOrder.attVsDef.title=Prikaži protivnikove ocjene kao napad protiv obrane ili kao napad protiv napada
 matchOrder.summary=Rezime
 matchOrder.tournamentMatch=Utakmica turnira
 matchOrder.homeAway=Automatski detektirati, dodaj domaću ili gostujuću momčad?
@@ -878,7 +878,7 @@ copy.fixturesSource.copied=Izvorni kod rasporeda je kopiran.
 
 #matches
 matches.income=Prihod\:
-matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
+matches.attackdefensebars=Prikaz 'Napada protiv Obrane'
 matches.right=Desni
 matches.left=Lijevi
 matches.center=Središnji
