--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -176,6 +176,9 @@ module.TeamStats.General.desc=Informatii generale (ITC/varsta)
 module.TeamStats.Speciality.desc=Specialitate
 module.TeamStats.Personality.desc=Personalitate
 module.TeamStats.Status.desc=Status (cartonase/accidentari)
+module.TeamStats.Attributes.desc=Atribute
+module.TeamStats.Skills.desc=Calități
+module.TeamStats.Match.desc=Meci
 module.TeamStats.Current_league.desc=Liga actuala
 module.ExtraPlayerInfo.desc=Arata informatii suplimentare a jucatorilor pe pagina jucatorilor.
 module.ExtraPlayerInfo.CoachInfo.desc=Arata informatii despre fosti si actuali antrenori.
@@ -295,6 +298,7 @@ module.TeamPopupLinks.LastLineup.desc=Link catre ultima asezare
 module.TeamPopupLinks.NextMatch.desc=Link catre urmatorul meci
 module.TeamPopupLinks.AddNextMatch.desc=Adauga urmatorul meci la HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Link catre meciurile juniorilor
+module.TeamPopupLinks.Tournaments.desc=Turnee
 module.TeamPopupLinks.Coach.desc=Link catre Antrenor
 module.TeamPopupLinks.CustomLink.desc=Link-uri particularizate in linii separate. Tag-urile [UserID] si [TeamID] vor fi inlocuite cu ID-urile actuale. Exemplu\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Vizualizare mai usoara a calitatilor
@@ -388,14 +392,22 @@ module.RatingsDisplay.HatStats.desc=Ca HatStats
 module.RatingsDisplay.HTSums.desc=Ca sumă ratinguri Hattrick
 module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pentru a arata mai putin suspecte. Asigura-te ca dezactivezi toate modulele care ar putea fi riscante, mai ales modulele "Alert".
 module.PlayerStatsExperience.desc=Afișează subskill-ul experienței pe pagina playerStats
+module.YouthTwins.desc=Afișează numărulul de gemeni posibili pentru juniori coroborat cu hattrick youthclub. Nu ai nevoie de cont hattrick youthclub pentru a folosi acest modul. Din moment ce cunoștințele despre fețele jucătorilor sunt foarte importante pentru a detecta gemeni această opțiune este folositoare doar pentru cei care posedă pachetul Supporter.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bonus club mamă)
+LoyaltyDisplay.loyaltyBonus=(Bonus loialitate)
 
 #Youth-Twins
+YouthTwins.possibleTwins=Acest jucător are %1 posibil geamăn.; Acest jucător are %1 gemeni posibili.
+YouthTwins.markedTwins=Marcat ca geamăn\: %1
+YouthTwins.nonTwins=Marcat ca non-geamăn\: %1
+YouthTwins.undecidedTwins=Nemarcat încă\: %1
+YouthTwins.nonHyUser=Ai putea afla mai multe despre potențialul lui folosind hattrick youthclub.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=El deja a colectat între %1 și %2 din 28 puncte de experiență. Experiența lui este între %3 și %4.
@@ -433,7 +445,7 @@ HistoryStats.cupwinner.short=CC
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Jucătorul poate fi promovat %1 zi mai târziu, pe %2.;Jucătorul poate fi promovat %1 zile mai târziu, pe %2.
+YouthPromotes.future=Jucătorul poate fi promovat %1 zile mai târziu, pe %2.;Jucătorul poate fi promovat %1 zile mai târziu, pe %2.
 YouthPromotes.today=Jucatorul poate fi promovat astazi\!
 
 #teamstats+filters
@@ -923,6 +935,7 @@ NextMatch=Meciul următor
 AddNextMatch=Adaugă meciul următor în HT-Live
 LastLineup=Ultima asezare
 YouthMatches=Meciuri juniori
+Tournaments=Turnee
 more=Mai multe...
 less=Mai puține...
 
