--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -15,6 +15,7 @@
 
 <note version="0.9.2">
 <item>● 또 하나의 거대한 언어 업데이트. 모든 번역가분들에게 다시 한 번 감사드립니다.</item>
+<item>● Rewrote language detection. Should never break again</item>
 <item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험 포인트와 현재 소수부를 나타냅니다. (CatzHoek)</item>
 <item>● NEW: <module>TeamPopupLinks</module>: 토너먼트를 추가하였습니다. 테이블의 현재 팀을 선택적으로 강조합니다. (기본 활성화)</item>
 <item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 평균 레이팅을 시리즈 통계 테이블에 추가합니다.</item>
@@ -36,7 +37,7 @@
 <item>● AMO 규정을 위한 몇 가지 작업이 있었습니다.</item>
 <item></item>
 <item><xhtml:b>Google Chrome 사용자에게</xhtml:b></item>
-<item>Chrome의 선택적 권한 허가 시스템에 권한 거부와 재허가하는데 문제가 있는 것 같습니다. 권한 거부로 복구하려면 현재 알려진 유일한 해결책은 Foxtrick을 재설치하는 것입니다.</item>
+<item>Chrome 18의 선택적 권한 허가 시스템에 버그가 있는 것 같습니다. 이것을 필요로 하는 기능(HTY staffmarker and EmbedMedia)이 현재 작동하지 않습니다.</item>
 </note>
 
 <note version="0.9.1">
