*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9395 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -128,6 +128,7 @@ module.LinksAchievements.desc=Añadir algunos links externos en la página de lo
 module.LinksStaff.desc=Añadir algunos links externos en la página de los empleados
 module.LinksTracker.desc=Añadir algunos links externos en las páginas de seguimiento de las Selecciones Nacionales
 module.LinksClubTransfers.desc=Añadir algunos links externos en la página de transferencias del equipo
+module.LinksWorld.desc=Agrega algunos enlaces a la página de Mundo
 module.LoyaltyDisplay.desc=Resaltar el efecto de la lealtad y bono de club madre en la página personal del jugador (funciona sólo con la opción 'Mostrar barras de habilidades' activado en las preferencias de HT)
 module.ForumAlterHeaderLine.desc=Alterar línea de cabecera del mensaje
 module.Singleline2.desc=Cabecera de conferencia alternativa en una sola línea. Ligeramente más rápido que otras versiones. Deshabilita algunas opciones de configuración conflictivas.
@@ -174,6 +175,9 @@ module.TeamStats.General.desc=Información general (TSI / edad)
 module.TeamStats.Speciality.desc=Especialidad
 module.TeamStats.Personality.desc=Personalidad
 module.TeamStats.Status.desc=Status (tarjetas / lesiones)
+module.TeamStats.Attributes.desc=Atributos
+module.TeamStats.Skills.desc=Habilidades
+module.TeamStats.Match.desc=Partido
 module.TeamStats.Current_league.desc=Liga actual
 module.ExtraPlayerInfo.desc=Muestra información adicional de los jugadores en la página de jugadores.
 module.ExtraPlayerInfo.CoachInfo.desc=Muestra información del entrenador actual y de los anteriores.
@@ -293,6 +297,7 @@ module.TeamPopupLinks.LastLineup.desc=Última alineación
 module.TeamPopupLinks.NextMatch.desc=Próximo partido
 module.TeamPopupLinks.AddNextMatch.desc=Añade siguiente partido a HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Partidos de juveniles
+module.TeamPopupLinks.Tournaments.desc=Torneos
 module.TeamPopupLinks.Coach.desc=Entrenador
 module.TeamPopupLinks.CustomLink.desc=Vínculos personalizados en líneas separadas. Las etiquetas [UserID] y [TeamID] serán reemplazadas por los actuales IDs. Ejemplo\: {"link"\:"http\://ejemplo.com/[teamid]", "title"\:"ejemplo link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Mejor visualización de habilidades
@@ -386,16 +391,28 @@ module.RatingsDisplay.HatStats.desc=Como HatStats
 module.RatingsDisplay.HTSums.desc=Como Hattrick ratings suman
 module.SafeForWork.desc=Sustituye el icono y el texto del título de las pestañas de Hattrick para parecer menos sospechoso. Asegúrate también de desactivar todos los otros módulos que pueden ser peligrosos, especialmente los módulos de alerta.
 module.PlayerStatsExperience.desc=Despliega los subniveles de experiencia en la página de playerStats
+module.YouthTwins.desc=Muestra la cantidad de gemelos posibles para tus jugadores juveniles junto con hattrick youthclub. No es necesario tener una cuenta de hattrick youthclub para utilizar este módulo. Dado que el conocimiento acerca de las caras del jugador es crucial para la detección de gemelos, esta función sólo es útil para supporters.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bono de Club Madre)
+LoyaltyDisplay.loyaltyBonus=(Bono de Lealtad)
 
 #Youth-Twins
+YouthTwins.possibleTwins=Este jugador tiene %1 de  posible gemelo.;Este jugador tiene %1 de gemelos posible.
+YouthTwins.markedTwins=Marcado como gemelos\: %1
+YouthTwins.nonTwins=Marcado como no gemelos\: %1
+YouthTwins.undecidedTwins=Aún no marcado\: %1
+YouthTwins.nonHyUser=Puedes encontrar más información acerca de su potencial mediante hattrick youthclub.
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Ya recogió entre %1 y %2 de 28 puntos de experiencia. Su experiencia es entre %3 y %4.
+PlayerStatsExperience.NotAllMatchesVisible=El valor real podría ser mayor debido a que no todos los partidos se muestran.
+PlayerStatsExperience.NoSkillUpFound=El valor real podría ser mayor porque no se ha encontrado ninguna experiencia de aumento de habilidades registrada.
+PlayerStatsExperience.ExperienceChange.title=Ganancia de experiencia
 
 #Series statistics
 rating.average=Rendimiento promedio
@@ -619,7 +636,7 @@ Passing.abbr=PS
 Defending=Defensa
 Defending.abbr=DF
 Keeper=Portería
-Keeper.abbr=KP
+Keeper.abbr=ARQ
 Set_pieces=Balón parado
 Set_pieces.abbr=BP
 
@@ -893,6 +910,7 @@ NextMatch=Próximo partido
 AddNextMatch=Añade siguiente partido a HT-Live
 LastLineup=Última alineación
 YouthMatches=Partidos de juveniles
+Tournaments=Torneos
 more=más...
 less=menos...
 
