--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -15,7 +15,7 @@
 
 <note version="0.9.2">
 <item>● 또 하나의 거대한 언어 업데이트. 모든 번역가분들에게 다시 한 번 감사드립니다.</item>
-<item>● Rewrote language detection. Should never break again</item>
+<item>● 언거 감지를 재작성했습니다. 다시 이런 문제를 일으키진 않을 것입니다.</item>
 <item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험 포인트와 현재 소수부를 나타냅니다. (CatzHoek)</item>
 <item>● NEW: <module>TeamPopupLinks</module>: 토너먼트를 추가하였습니다. 테이블의 현재 팀을 선택적으로 강조합니다. (기본 활성화)</item>
 <item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 평균 레이팅을 시리즈 통계 테이블에 추가합니다.</item>
@@ -34,6 +34,7 @@
 <item>● ShowLineupSet: HT 변경사항에 따른 깨진 레이아웃을 수정하였습니다.</item>
 <item>● 북마크된 선수의 누락된 playerid을 복구하였습니다.</item>
 <item>● 이적료 중간값을 수정하였습니다.</item>
+<item>● MatchOrder: 최근에 출전했던 선수 강조를 이제 경기장에도 표시됩니다.</item>
 <item>● AMO 규정을 위한 몇 가지 작업이 있었습니다.</item>
 <item></item>
 <item><xhtml:b>Google Chrome 사용자에게</xhtml:b></item>
