*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9409 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -412,6 +412,7 @@ PlayerStatsExperience.NotAllMatchesVisible=Der tatsächliche Wert kann höher li
 PlayerStatsExperience.NoSkillUpFound=Der tatsächliche Wert kann höher liegen da der letzte Erfahrungssprung nicht bekannt ist.
 PlayerStatsExperience.ExperienceChange.title=Erfahrungsgewinn
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+PlayerStatsExperience.Walkover=Der Gegner trat zu diesem Spiel nicht an (Walkover). Deswegen konnte der Spieler keine Erfahrung hinzugewinnen.
 
 #Series statistics
 rating.average=Durchschnittliche Bewertung
