--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -414,6 +414,7 @@ PlayerStatsExperience.NotAllMatchesVisible=La valeur réelle pourrait être plus
 PlayerStatsExperience.NoSkillUpFound=La valeur réelle pourrait être plus élevée car aucun gain d'expérience n'a été trouvé.
 PlayerStatsExperience.ExperienceChange.title=Gain d'expérience
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+PlayerStatsExperience.Walkover=Le match a été gagné par forfait, le joueur n'a donc pas acquis d'expérience.
 
 #Series statistics
 rating.average=Notes moyennes
