--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -415,6 +415,7 @@ PlayerStatsExperience.NotAllMatchesVisible=모든 경기가 나타나지 않기 
 PlayerStatsExperience.NoSkillUpFound=아무런 경험 레벨 업을 발견할 수 없었기 때문에 실제 수치는 더 높을 수도 있습니다.
 PlayerStatsExperience.ExperienceChange.title=경험 포인트 획득
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+PlayerStatsExperience.Walkover=이 경기는 부전승이었습니다. 따라서 선수는 어떠한 경험도 얻을 수 없었습니다.
 
 #Series statistics
 rating.average=평균 레이팅
