Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9414 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -376,7 +376,8 @@ module.SupporterStatsEnhancements.desc=Означава играче који с
 module.MobileEnhancements.desc=Побољшања за мобилне телефоне
 module.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су играли у последњем мечу и приказује разлику између предвиђених оцена.
 module.MatchOrderInterface.PlayedLastMatch.desc=Означава играче који су играли на последњем мечу и приказује последњу позицију на којој су играли у пољу са детаљима о играчу.
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Означи и играче у постави
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Означи и играче у налозима за меч
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Искључи за мечеве турнира
 module.MatchOrderInterface.Specialties.desc=Прикажи специјалност играча
 module.MatchOrderInterface.StayOnPage.desc=Остани на страници са налозима када сачуваш поставу
 module.MatchOrderInterface.SwapPositions.desc=Додаје линк да замените места играчима у постави са леве на десну страну и обрнуто
