*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9415 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -375,6 +375,7 @@ module.SupporterStatsEnhancements.desc=Fremhæver nuværende spillere trup i sup
 module.MobileEnhancements.desc=Sæt med forbedringer til mobile enheder
 module.MatchOrderInterface.desc=Finjustere på kampordre inter-facet.
 module.MatchOrderInterface.PlayedLastMatch.desc=Fremhæver spillere der spillede i den sidste kamp og viser den sidst spillede position og tid, i boksen detaljer
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Fremhæv også på banen
 module.MatchOrderInterface.Specialties.desc=Vis spillere specialiteter
 module.MatchOrderInterface.StayOnPage.desc=Bliv på kampordre siden efter afgivning af ordre
 module.MatchOrderInterface.SwapPositions.desc=Tilføj et link til at bytte spillere fra venstre til højre
@@ -414,6 +415,7 @@ PlayerStatsExperience.NotAllMatchesVisible=Den faktiske værdi kan være højere
 PlayerStatsExperience.NoSkillUpFound=Den faktiske værdi kan være højere, fordi ingen rutine stigning blev fundet.
 PlayerStatsExperience.ExperienceChange.title=Rutine gevinst
 PlayerStatsExperience.ExperienceChange.title.abbr=RU+
+PlayerStatsExperience.Walkover=Denne kamp var en walkover. Derfor fik spillerne ikke nogen rutine point.
 
 #Series statistics
 rating.average=Gennemsnitsvurdering
