--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -377,6 +377,8 @@ module.SupporterStatsEnhancements.desc=Highlights current squad players in suppo
 module.MobileEnhancements.desc=Set of enhancements for mobile devices
 module.MatchOrderInterface.desc=Tweaks on the match order interface.
 module.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows the last position and the time played in the details box
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Also highlight on the field
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disable for tournaments matches
 module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
 module.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
