--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -375,6 +375,7 @@ module.SupporterStatsEnhancements.desc=Mettre en évidence les joueurs de l'effe
 module.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mobiles
 module.MatchOrderInterface.desc=Réglage de l'interface d'ordre de match
 module.MatchOrderInterface.PlayedLastMatch.desc=Mettre en évidence les joueurs qui ont joué lors du dernier match ainsi que leur position et leur temps de jeu dans la boite de dialogue
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Également mettre en évidence sur le terrain
 module.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
 module.MatchOrderInterface.StayOnPage.desc=Rester sur la page d'ordre de match après avoir sauvegardé
 module.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
