Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9420 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,7 +14,8 @@
 </note>
 
 <note version="0.9.3">
-<item>● MatchOrder: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
+<item>● <module>MatchOrder</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
+<item>● <module>PlayerStatsExperience</module>: Исправљена грешка за играче који су добили црвени картон код којих су ови мечеви детектовани као да су завршени службеним резултатом</item>
 </note>
 
 <note version="0.9.2">
