--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,7 +14,7 @@
 </note>
 
 <note version="0.9.3">
-<item>● <module>MatchOrder</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
+<item>● <module>MatchOrderInterface</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка за играче који су добили црвени картон код којих су ови мечеви детектовани као да су завршени службеним резултатом</item>
 </note>
 
